# final-project

./: .gitignore  CMakeLists.txt  README.md
include/: Clue.h  Day.h  Item.h  Player.h  autopsy.h  choice.h  clue.h  day.h  dialogue.h  dialogueunit.h  ending.h  gameLoader.h  gameLoop.h  gamedata.h  interface.h  interview.h  item.h  location.h  person.h  player.h  printer.h
src/: .gameLoader.cpp.swp  Clue.cpp  Day.cpp  Location.cpp  Main.cpp  Person.cpp  Player.cpp  TEST.cpp  autopsy.cpp  autopsy.txt  choice.cpp  clue.cpp  clue.txt  day.cpp  dialogue.cpp  ending.cpp  gameLoader.cpp  gameLoop.cpp  interface.cpp  interview.cpp  item.cpp  location.cpp  main.cpp  person.cpp  person.txt  player copy.cpp  player.cpp  player.txt  printer.cpp  testAutopsy.cpp  testClues.cpp  testGameLoader.cpp  testInterview.cpp  testItemClass.cpp  testLocation.cpp  testPersonClass.cpp  testPlayer.cpp
src/game_text_files/: autopsies.txt  clue.txt  day1Evening.txt  day1Morning.txt  day1Night.txt  day2Evening.txt  day2Morning.txt  day3Evening.txt  day3Night.txt  days.txt  ending.txt  interview.txt  item.txt  locations.txt  person.txt
src/game_text_files/Codeguides.txt/: Day1MorningCODEguide.txt  Interface.txt  day1Morning.txt  daycluesGUIDE.txt
